# cps511-assignment

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
data/shaders/: ground.vert
include/: CubeMesh.h  Duck.h  QuadMesh.h  Robot.h  ShaderUtils.h
include/shaders/: ground.frag
src/: CubeMesh.cpp  Duck3D.cpp  QuadMesh.cpp  Robot3D.cpp  ShaderUtils.cpp  main.cpp
